--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Media</string>
+    <string name="login_fail">login fail</string>
+    <string name="logining">logining</string>
+    <string name="user_database_error">user database error</string>
+    <string name="login_fail_unknow_user">login fail,unknow username</string>
+    <string name="login_fail_error_password">login fail,error password</string>
+    <string name="username_password_empty">username or password is empty</string>
 </resources>
